fix flex wrapping issue

--- a/css/index.less
+++ b/css/index.less
@@ -16,6 +16,7 @@
             max-height: 1000px;
             height: auto;
             justify-content: center;
+            flex-wrap: wrap;
             .project {
                 border-radius: 20px;
                 padding: 10px;
@@ -97,6 +98,10 @@
         .project {
             height: 200px;
             width: 200px;
+            
+            min-height: 200px;
+            min-width: 200px;
+
             margin: auto;
             button {
                 font-size: 12px;
@@ -116,6 +121,10 @@
         .project {
             height: 200px;
             width: 200px;
+
+            min-height: 200px;
+            min-width: 200px;
+
             margin: auto;
             button {
                 font-size: 12px;
@@ -135,7 +144,11 @@
         .project {
             height: 250px;
             width: 250px;
-            margin: 20px;
+
+            min-height: 250px;
+            min-width: 250px;
+
+            margin: 5px;
             button {
                 font-size: 14px;
             }
@@ -154,7 +167,11 @@
         .project {
             height: 300px;
             width: 300px;
-            margin: 20px;
+
+            min-height: 300px;
+            min-width: 300px;
+
+            margin: 10px;
             button {
                 font-size: 16px;
             }
@@ -172,6 +189,10 @@
         .project {
             height: 300px;
             width: 300px;
+
+            min-height: 300px;
+            min-width: 300px;
+
             margin: 20px;
             button {
                 font-size: 16px;
